CheckYourEligibility.Admin/wwwroot/css/site.css
.paragraph-add-margin-top {
    margin-top: 16px;
}

@media (min-width: 40.0625em) {
    .paragraph-add-margin-top {
        margin-top: 24px;
    }
}

.paragraph-add-margin-ingroup {
    margin-top: 16px;
    margin-bottom: 16px;
}

/*BEGIN - back button overrides */
.govuk-main-wrapper {
    display: block;
    padding-top: 5px;
    padding-bottom: 20px;
}

@media (min-width: 40.0625em) {
    .govuk-main-wrapper {
        padding-top: 5px;
        padding-bottom: 40px;
    }
}

.govuk-main-wrapper--auto-spacing:first-child,
.govuk-main-wrapper--l {
    padding-top: 5px;
}

@media (min-width: 40.0625em) {
    .govuk-main-wrapper--auto-spacing:first-child,
    .govuk-main-wrapper--l {
        padding-top: 5px;
    }
}

.govuk-back-link {
    font-size: 0.875rem;
    line-height: 1.14286;
    font-family: "GDS Transport", arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    text-underline-offset: 0.1578em;
    display: inline-block;
    position: relative;
    margin-top: 0px;
    margin-bottom: 30px;
    padding-left: 0.875em;
    text-decoration: underline max(1px, 0.0625rem);
}

.govuk-back-link-nolink {
    font-size: 0.875rem;
    line-height: 1.14286;
    font-family: "GDS Transport", arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    text-underline-offset: 0.1578em;
    display: inline-block;
    position: relative;
    margin-top: 0px;
    margin-bottom: 30px;
    padding-left: 0.875em;
    text-decoration: underline max(1px, 0.0625rem);
}
/*END - back button overrides */


/*BEGIN - Header account links */
#content-header .dfe-header__action-links a,
#content-header .dfe-header__action-links a:visited,
#content-header .dfe-header__action-links a:active {
    color: white;
    text-decoration: none;
}

    #content-header .dfe-header__action-links a:hover {
        text-decoration: underline;
    }

.govuk-pagination {
    justify-content: center;
}
/*END - Header account links */


/*BEGIN - Accessible dashboard card links */
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}
/*END - Accessible dashboard card links */


/* MENU ITEM */
.moj-button-menu__item {
    display: inline-block;
    margin-right: 10px;
    margin-bottom: 10px;
    width: auto;
}

    .moj-button-menu__item:last-child {
        margin-right: 0;
    }
/* END MENU ITEM */


/*BEGIN - Header overrides */
/*.dfe-header__container {
    padding: 0;
    padding-top: 20px;
}

.dfe-header__navigation {
    background-color: #003a69;
    display: block;
    margin: 0 auto;
    max-width: 1264px;
}

.dfe-header__navigation-link:visited {
    color: white;
}

.dfe-header__link--service {
    align-items: baseline;
    display: flex;
    -ms-flex-align: center;
    margin-bottom: 0;
    width: auto;
}

.dfe-header__navigation-list {
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    display: flex;
    justify-content: flex-start;
    padding: 0;
    width: 100%;
}

img, svg {
    vertical-align: baseline;
}

.dfe-header__navigation-item {
    border-top: 0
}

.dfe-header__service-name {
    max-width: 1264px;
    display: inline;
}

@media (max-width: 61.865em) {
    .dfe-header__service-name {
        padding-left: 10px;
        padding-top: 5px;
    }
}

.dfe-header__navigation-link {
    padding: 5px 10px;
}

@media (max-width: 48.0525em) {
    .dfe-header__logo {
        max-width: 100%;
    }
}*/
/*END - Header overrides */


/*BEGIN - Child Details form title width extention override */
@media (min-width: 40.0625em) {
    .govuk-summary-list__key {
        width: 45%; /*to fit NIN/ASRN title*/
    }
}
/*END - Child Details form title width extention override */

body.js-enabled .noJsShow, body:not(.js-enabled) input.noJsRemove {
    display: none;
}

/*BEGIN - Remove whitespace from ApplicationDetailLA below name and actions */
.whitespaceDelete {
    margin-bottom: 0;
}
/*END - Remove whitespace from ApplicationDetailLA below name and actions */

/*BEGIN - Inline style replace for search all records design team customised styles */
.govuk-page-header-customisation {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.govuk-heading-m-customisation {
    margin: 0;
}
/*END - Inline style replace for search all records design team customised styles */

/*BEGIN - Force thumbnail container width on Home/FSMFormDownload to avoid text overlap on page resize */
.fsm-image {
    min-width: 175px;
}
/*END - Force thumbnail container width on Home/FSMFormDownload to avoid text overlap on page resize */

/*BEGIN - Style a button as a link */
.button-as-link-style {
    background: none;
    border: none;
    color: #1d70b8;
    text-decoration: underline;
    cursor: pointer;
    /*    font-size: inherit;*/
}
/*END - Force thumbnail container width on Home/FSMFormDownload to avoid text overlap on page resize */

/*BEGIN - Align right and set correct margin for 'Remove' link on Evidence Upload Items */
.alignRight {
    text-align: right;
    display: block;
    margin-right: -5px;
}
/*END - Align right and set correct margin for 'Remove' link on Evidence Upload Items */

/*BEGIN - Class with associated JS function in cookieFunctions.js to show content when JS is enabled */
.js-only {
    display: none;
}

.show {
    display: block;
}
/*END - Class with associated JS function in cookieFunctions.js to show content when JS is enabled */


/*BEGIN - Images in FSM Basic guidance page */
.guidanceImages {
    max-width: 90%;
    height: auto;
}
/*END - Images in FSM Basic guidance page */


/* MOJ BULK CHECK RULES START*/
hr.hideSectionBreak {
    height: 0;
    margin: 1.5rem 0;
}

.dashedBorder { /*Remove when upgrading to droppable file input area*/
    border: dashed;
    border-color: rgb(177, 180, 182);
    padding: 20px;
    margin-bottom: 30px;
}

table {
    caption-side: top;
}
/* MOJ BULK CHECK RULES END*/

/*BEGIN - Update default fonts to Inter */
* {
    font-family: 'Inter', sans-serif !important;
}
/*END - Update default fonts to Inter */

/*BEGIN Header overrides for v6 brand refresh */
.govuk-header__container { /*Blue header sizing*/
    position: relative;
    margin-bottom: 0px;
    padding: 0;
    border-bottom: none;
    height: 60px;
}

.govuk-header__link .govuk-header__logotype { /*name logo image sizing*/
    height: 30px;
}

.govuk-width-container {
    margin: 0 16px;
    max-width: 1200px;
}

@media (min-width: 48.0625em) { /*641px*/
    .govuk-width-container {
        margin: 0 32px;
    }
}

@media (min-width: 1264px) {
    .govuk-width-container {
        margin: 0 auto;
    }
}

.govuk-service-navigation__container {
    display: flex;
    flex-direction: column;
    align-items: start;
    padding-bottom:10px;
}

@media (min-width: 40.0625em) {
    .govuk-service-navigation__container {
        flex-direction: row;
        flex-wrap: wrap;
    }
}

@media (min-width: 48.0625em) {
    .govuk-service-navigation__container {
        flex-direction: row;
        flex-wrap: wrap;
        min-width: 90%;
    }
}

.govuk-service-navigation {
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-bottom-color: #b1b4b6;
    background-color: #f3f2f1;
}

.govuk-service-navigation__item, .govuk-service-navigation__service-name {
    padding: 5px 0;
}
/*END Header overrides for v6 brand refresh */

